k8s/app-manifest/j26-strapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-strapi
  template:
    metadata:
      labels:
        app: j26-strapi
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: j26-strapi-app
          image: ghcr.io/scouterna/j26-strapi:latest
          ports:
            - containerPort: 1337
          readinessProbe:
            httpGet:
              path: /_health
              port: 1337
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /_health
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: uploads
              mountPath: "/opt/app/public/uploads"
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-strapi-kv-csi
        - name: uploads
          persistentVolumeClaim:
            claimName: j26-strapi-uploads
