k8s/app-manifest/j26-strapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-strapi
spec:
  selector:
    app: j26-strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
